[package]
name = "asperger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
regex = "1.10.2"
ahash = "0.8.12"
chrono = "0.4"
dap = "0.4.1-alpha1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] }

[[bin]]
name = "asperger-debug"
path = "src/bin/asperger_debug.rs"
