[package]
name = "asperger"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dhat = "0.1"

[[bench]]
name = "level1_vbscript"
harness = false

[[bench]]
name = "level2_http"
harness = false

[features]
default = ["fetchurl"]
fetchurl = ["dep:reqwest"]

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "signal", "time", "sync"] }
clap = { version = "4.0", features = ["derive", "env"] }
regex = "1.10.2"
ahash = "0.8.12"
chrono = "0.4"
dap = "0.4.1-alpha1"
axum = "0.7"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "asperger-debug"
path = "src/bin/asperger_debug.rs"
